# 86Box

src/cpu/: CMakeLists.txt
src/include/86box/: sound.h
src/sound/: CMakeLists.txt  snd_adlib.c  snd_imfc.c  sound.c
src/sound/imfc/: CMakeLists.txt  i8253.c  i8253.h  opm.c  opm.h  piu.c  piu.h  ppi_v2.c  ppi_v2.h
